<resources>
    <string name="app_name">ExchangeRatesTracking</string>
    <string name="title_home">Популярное</string>
    <string name="title_favourite">Избранное</string>
    <string name="sort">Сортировка</string>
    <string name="something_went_wrong">Что-то пошло не так</string>
    <string name="no_data_available">Данные не доступны</string>
    <string name="no_fav">Нет избранных валют, добавьте из раздела "Популярное"</string>
    <string name="reload">Перезагрузить</string>
    <string-array name="example">
        <item>EUR</item>
    </string-array>
    <string-array name="sort_types">
        <item>A-Z</item>
        <item>Z-A</item>
        <item>По возрастанию значения</item>
        <item>По убыванию значения</item>
    </string-array>
    <string name="sort_type_az">A-Z</string>
    <string name="sort_type_za">Z-A</string>
    <string name="sort_type_asc">По возрастанию значения</string>
    <string name="sort_type_desc">По убыванию значения</string>
</resources>