<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".presentation.BaseFragment">

    <LinearLayout
        android:id="@+id/layout_sort"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal|top"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/bg_filters_widget"
        android:elevation="2dp"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/spinner_currency"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:focusable="true"
            android:fontFamily="@font/goodpro_extd"
            android:gravity="center"
            android:paddingEnd="7dp"
            android:entries="@array/example"
            android:backgroundTint="@color/blue_zodiac_transparent"
            android:textSize="16sp"
            />

        <View
            android:layout_width="1dp"
            android:layout_height="18dp"
            android:layout_gravity="center_vertical"
            android:alpha="0.12"
            android:background="@color/blue_zodiac" />

        <TextView
            android:id="@+id/text_view_sort"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:paddingStart="10dp"
            android:paddingEnd="8dp"
            tools:text="@string/sort"
            app:drawableEndCompat="@drawable/ic_arrow_drop_down"
            android:fontFamily="@font/goodpro_extd"
            android:textSize="16sp"
            android:textColor="@color/blue_zodiac"/>
    </LinearLayout>


    <FrameLayout
        android:id="@+id/frame_layout_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="60dp"
        android:layout_gravity="center_horizontal">

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/swipe_refresh_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view_content"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                android:background="@color/window_background"
                android:clipToPadding="false"
                android:visibility="gone"
                tools:listitem="@layout/item_exchange_rate"
                tools:visibility="visible" />

        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminate="true"
            android:indeterminateDrawable="@drawable/drawable_progress_bar_default"
            android:indeterminateTint="@color/grey_purple"
            android:visibility="gone"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/text_view_no_fav"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/no_fav"
            android:visibility="gone" />

        <TextView
            android:id="@+id/text_view_empty_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone"
            tools:text="@string/no_data_available" />

        <LinearLayout
            android:id="@+id/layout_error"
            android:layout_width="match_parent"
            android:layout_height="524dp"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone"
            tools:visibility="visible">

            <TextView
                android:id="@+id/text_view_error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/something_went_wrong" />

            <Button
                android:id="@+id/button_error"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/blue_zodiac"
                android:text="@string/reload"
                android:layout_margin="20dp">

            </Button>

        </LinearLayout>


    </FrameLayout>
</LinearLayout>