<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".presentation.home.HomeFragment">

    <LinearLayout
        android:id="@+id/layoutSort"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:layout_gravity="center_horizontal"
        android:layout_margin="8dp"
        android:background="@drawable/bg_filters_widget"
        android:elevation="2dp"
        android:orientation="horizontal"
        android:padding="8dp">

        <TextView
            android:id="@+id/textViewSortBy"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_filters_widget_start"
            android:clickable="true"
            android:drawableEnd="@drawable/ic_dropdown"
            android:drawablePadding="10dp"
            android:focusable="true"
            android:fontFamily="@font/goodpro"
            android:gravity="center"
            android:paddingStart="8dp"
            android:paddingEnd="10dp"
            android:textColor="@color/blue_zodiac"
            android:textSize="12sp"
            tools:text="EU" />

        <View
            android:layout_width="1dp"
            android:layout_height="18dp"
            android:layout_gravity="center_vertical"
            android:alpha="0.12"
            android:background="@color/blue_zodiac" />

        <TextView
            android:id="@+id/textViewSort"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_filters_widget_end"
            android:clickable="true"
            android:drawableEnd="@drawable/ic_dropdown"
            android:drawablePadding="10dp"
            android:focusable="true"
            android:fontFamily="@font/goodpro"
            android:gravity="center"
            android:paddingStart="16dp"
            android:paddingEnd="8dp"
            android:text="@string/sort"
            android:textColor="@color/blue_zodiac"
            android:textSize="12sp" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/frame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewContent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/window_background"
            android:clipToPadding="false"
            android:visibility="gone"
            tools:listitem="@layout/item_exchange_rate"
            tools:visibility="visible" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminate="true"
            android:indeterminateDrawable="@drawable/drawable_progress_bar_default"
            android:indeterminateTint="@color/grey_purple"
            android:visibility="gone"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/emptyTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone"
            android:text="@string/no_data_available" />

        <TextView
            android:id="@+id/errorTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone"
            android:text="@string/something_went_wrong" />

    </FrameLayout>
</LinearLayout>